Rework JVM 01 + 09 chapters: Spring Boot loading focus, Linking accuracy, chapter-wide mock interview tree
- 02-classloader-hierarchy: drop Tomcat/OSGi detours, refocus on real Spring Boot fat jar loading (BOOT-INF, JarLauncher, LaunchedURLClassLoader, DevTools dual-CL, 8 production error patterns).
- 03-linking: fix Pass 4 / lazy resolution / invoke* opcode rules / NoClassDefFoundError / StackMapTable / CONSTANT_Dynamic per JVMS, plus toggles unpacking magic/CP/tags/opcode/dispatch/vtable/itable.
- 09-mock-interviews: rewrite as per-chapter follow-up question tree (00 through 08) with toggled answers, level tags (Junior/Senior/Principal), and a 5-stage CP interview script.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>